# BlockGame

./: CMakeLists.txt  PROGRESS_REPORT.md  README.md  dependencies.sh
lib/glad/: CMakeLists.txt
lib/glm/: integer.hpp
lib/glm/detail/: qualifier.hpp  type_mat4x4.inl  type_quat.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
lib/glm/gtc/: type_ptr.hpp
lib/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
lib/imgui/backends/: imgui_impl_opengl3.cpp
maps/: doors.txt  test.txt
shaders/: fragment2D.glsl  textured-fragment.glsl  textured-vertex.glsl  vertex2D.glsl
src/: Scene.cpp  Scene.h  State.cpp  State.h  main.cpp  utils.cpp  utils.h
src/generator/: Generator.h  SimpleGenerator.cpp  SimpleGenerator.h
src/parse/: MapParser.cpp  MapParser.h
src/repr/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Generator.cpp  Generator.h  Map.cpp  Map.h  World.cpp  World.h  location.h
src/vis/: Models.cpp  Models.h  Scene.h
